# FCM_Structured

./: .gitignore  README.md  main.py  pyproject.toml
config/: context.md  local_settings.example.ini
docs/: v2_assessment.md
src/: CMS.py  CustomerCheckerV2_shared.py  ReOpenCheck_shared.py  cms_session.py  config.py  edge_auto.py  module_loader.py
src/fcm_intake/: __main__.py  app.py  context.py
src/fcm_intake/automation/: legacy_loader.py
src/fcm_intake/cms/: edge.py  session.py
src/fcm_intake/config/: __init__.py
src/fcm_intake/legacy/: CMS.py  legacy_cem.py  legacy_customerchecker.py  legacy_fcm.py  legacy_googlesearch.py  legacy_providerresultchecker.py  legacy_reopencheck.py  legacy_unity.py
src/fcm_intake/runners/: customer_checker.py  fcm.py  reopen_check.py
src/fcm_intake/workflows/: customer_checker.py  reopen_check.py
tests/smoke/: test_no_v2_references.py
tests/unit/: test_config_paths.py  test_legacy_loader.py  test_local_settings.py
tools/agent-pack/: CHANGELOG.md  LICENSE  README.md  catalog.yaml
tools/agent-pack/adapters/claude/: CLAUDE.md
tools/agent-pack/adapters/codex/: AGENTS.md
tools/agent-pack/examples/backend-api-project/: README.md
tools/agent-pack/examples/healthcare-automation-project/: README.md
tools/agent-pack/examples/python-automation-project/: README.md
tools/agent-pack/examples/react-dashboard-project/: README.md
tools/agent-pack/examples/terminal-emulator-project/: README.md
tools/agent-pack/installers/: doctor.py  install.ps1  install.sh  uninstall.ps1  uninstall.sh
(+29 files in other folders)
